# canbus-decoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench_decoder.cpp
include/: can_frame.hpp  decoder.hpp  signal_table.hpp  simulator.hpp  socketcan_reader.hpp
src/: can_frame.cpp  decoder.cpp  main.cpp  main_live.cpp  signal_table.cpp  simulator.cpp  socketcan_reader.cpp
tests/: test_decoder.cpp
